--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URL=mongodb+srv://user:user@cluster0.vpu6r.mongodb.net/cyberCityComics?retryWrites=true&w=majority
 FRONTEND_URL=http://localhost:3000
+PORT=5000
