--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 REACT_APP_PUBLIC_FOLDER=http://localhost:3000/assets/
-REACT_APP_API_URL=http://localhost:5000/
+REACT_APP_API_URL=https://prasanth-cyber-comics-app.herokuapp.com/
