--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 REACT_APP_PUBLIC_FOLDER=http://localhost:3000/assets/
-REACT_APP_API_URL=https://prasanth-cyber-comics-app.herokuapp.com/
-REACT_APP_API_URL_LOCAL=http://localhost:7000/
+REACT_APP_API_URL1=https://prasanth-cyber-comics-app.herokuapp.com/
+REACT_APP_API_URL=http://localhost:7000/
